# CodingPractice

./: .gitignore  README.md  todo.md
Docker/images/: Dockerfile
Ivan/Bootstrap/: index.html  reto1.html  reto2.html
Ivan/CursoPracticoJS/: descuentos.html  estilos.css  figuras.html  figuras.js
Ivan/ECMAScript/: package-lock.json  package.json
Ivan/NPMGestorPaquete/: package-lock.json  package.json
Ivan/asincronismo/: index.html  package-lock.json  package.json
Ivan/class1/: prepros.config
Ivan/scopeClousures/: package.json
Jenkins/: readme.md
angular/: readme.md
angular/my-store/: .firebaserc  angular.json
asincronismo/: package.json
assembly/: .gitignore  hello.asm  sum_2_num.asm
backend/MongoDB/: pass.key  readme.md
backend/aws/: readme.md  rod5919_credentials.csv
backend/db/: README.md  order_by.sql
backend/firebase/: readme.md  webpack.config.js
bootstrap/bootstrap-grid/: index.html  style.css
css/Propiedades de Ubicacion/: style2.css
db/: n2n.sql
devChallenges/01-Mininal-Blog-Card/: index.html  style.css
firebase/: package.json
frontend/animeJs/: main.js
frontend/auth0/: readme.md
frontend/tailwind/: package-lock.json
frontend/webpack/: package.json  stats.json
git/src/: blogpost.html
javascript/: example.js
portfolio/: index.html  style.css.map
python/poetry_practice/: Dockerfile  docker-compose.yml  pyproject.toml
rodri/: .gitignore  upload.sh
tailwind/: tailwind.config.js
typescript/: readme.md
webpack/: package.json  readme.md  webpack.config.dev.js  webpack.config.js  webpack.config.prod.js
(+992 files in other folders)
